--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: zminhas <zminhas@student.s19.be>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/18 18:35:49 by zminhas           #+#    #+#              #
-#    Updated: 2021/09/12 18:33:00 by zminhas          ###   ########.fr        #
+#    Updated: 2021/10/02 16:49:15 by zminhas          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,54 +21,19 @@ WHITE		= $(shell tput -Txterm setaf 7)
 RESET		= $(shell tput -Txterm sgr0)
 
 SRCS	=	ft_atoi.c\
-			ft_bzero.c\
-			ft_calloc.c\
 			ft_intlen.c\
-			ft_isalnum.c\
-			ft_isalpha.c\
-			ft_isascii.c\
 			ft_isdigit.c\
-			ft_isprint.c\
 			ft_itoa.c\
-			ft_memccpy.c\
-			ft_memchr.c\
-			ft_memcmp.c\
-			ft_memcpy.c\
-			ft_memmove.c\
-			ft_memset.c\
 			ft_putchar_fd.c\
 			ft_putendl_fd.c\
 			ft_putnbr_fd.c\
 			ft_putstr_fd.c\
-			ft_split.c\
 			ft_strchr.c\
-			ft_strdup.c\
-			ft_strjoin.c\
-			ft_strlcat.c\
-			ft_strlcpy.c\
 			ft_strlen.c\
-			ft_strmapi.c\
 			ft_strncmp.c\
-			ft_strnstr.c\
-			ft_strrchr.c\
-			ft_strtrim.c\
-			ft_substr.c\
-			ft_tolower.c\
-			ft_toupper.c
-
-SRCS_BONUS	=	ft_lstadd_back.c\
-				ft_lstadd_front.c\
-				ft_lstclear.c\
-				ft_lstdelone.c\
-				ft_lstiter.c\
-				ft_lstlast.c\
-				ft_lstmap.c\
-				ft_lstnew.c\
-				ft_lstsize.c
 
 OBJS	=	${SRCS:.c=.o}
 
-OBJS_BONUS	=	${SRCS_BONUS:.c=.o}
 
 NAME	=	libft.a
 
@@ -77,7 +42,7 @@ NAME	=	libft.a
 
 $(NAME):	${OBJS}
 			@ar -rcs ${NAME} ${OBJS}
-			@echo "${GREEN}Library created !${RESET}"
+			@echo "${BLUE}libft created !${RESET}"
 
 all:		${NAME}
 
@@ -90,14 +55,6 @@ fclean:
 			@rm -f ${NAME}
 			@rm -f ${OBJS_BONUS}
 
-bonus:		${OBJS_BONUS}
-			@ar -rcs ${NAME} ${OBJS_BONUS}
-			@echo "${PURPLE}Bonus !${RESET}"
-
-full:		${OBJS} ${OBJS_BONUS}
-			@ar -rcs ${NAME} ${OBJS} ${OBJS_BONUS}
-			@echo "${PURPLE}LIBFT READY !!!${RESET}"
-
 re:			fclean all
 
-.PHONY:		all clean fclean re bonus full
+.PHONY:		all clean fclean re
